# vtl

./: .gitignore  CMakeLists.txt  README.md  VTL_diagram.drawio  main.c  run.bat  run.sh  text.adoc  text.md
VTL/content_platform/: CMakeLists.txt  VTL_content_platform_publication.c
VTL/content_platform/infra/: VTL_content_platform_infra.h
VTL/content_platform/infra/audio/: VTL_audio_configs_for_gen_init.c  VTL_content_platform_infra_audio_configs_for_gen_init.c  VTL_content_platform_infra_audio_configs_for_gen_init.h  VTL_content_platform_infra_audio_gen.c  VTL_content_platform_infra_audio_gen.h
VTL/content_platform/infra/text/: VTL_content_platform_infra_text_configs_for_gen_init.c  VTL_content_platform_infra_text_configs_for_gen_init.h  VTL_content_platform_infra_text_gen.c  VTL_content_platform_infra_text_gen.h
VTL/content_platform/reddit/: VTL_content_platform_reddit_net.c  VTL_content_platform_reddit_net.h
VTL/content_platform/tg/: VTL_content_platform_tg_net.c  VTL_content_platform_tg_net.h
VTL/content_platform/tg/media_container_params/: VTL_content_platform_tg_params_audio.h  VTL_content_platform_tg_params_sub.h  VTL_content_platform_tg_params_video.h
VTL/content_platform/vimeo/: VTL_content_platform_vimeo_net.c  VTL_content_platform_vimeo_net.h
VTL/content_platform/vimeo/media_container_params/: VTL_content_platform_vimeo_params_video.c  VTL_content_platform_vimeo_params_video.h
VTL/history_administration/: CMakeLists.txt  VTL_history_administration.h  VTL_history_administration_data.c  VTL_history_administration_data.h
VTL/history_administration/db/: VTL_history_administration.h  VTL_history_administration_create.c  VTL_history_administration_create.h  VTL_history_administration_db.h  VTL_history_administration_db_create.c  VTL_history_administration_db_create.h  VTL_history_administration_db_delete.c  VTL_history_administration_db_delete.h  VTL_history_administration_db_edit.c  VTL_history_administration_db_edit.h  VTL_history_administration_db_read.c  VTL_history_administration_db_read.h  VTL_history_administration_delete.c  VTL_history_administration_delete.h  VTL_history_administration_edit.c  VTL_history_administration_edit.h  VTL_history_administration_read.c  VTL_history_administration_read.h
VTL/history_administration/io/: VTL_history_administration_io_show.c  VTL_history_administration_io_show.h  VTL_history_administration_show.c  VTL_history_administration_show.h
VTL/media_container/: CMakeLists.txt  VTL_media_container.h  VTL_media_container_data.h  VTL_media_container_video_sub_burner.c  VTL_media_container_video_sub_burner.h
VTL/media_container/audio/: VTL_media_container_audio.h  VTL_media_container_audio_data.c  VTL_media_container_audio_data.h
VTL/media_container/audio/infra/: VTL_media_container_audio_infra_config.h  VTL_media_container_audio_infra_file.h  VTL_media_container_audio_infra_read.c  (+3 more)
VTL/media_container/encoding/: CMakeLists.txt  VTL_media_container_encoding.h  VTL_media_container_encoding_core.c  VTL_media_container_encoding_cpu.c  VTL_media_container_encoding_loader.c  VTL_media_container_encoding_transcoder.c  VTL_media_container_encoding_vk.c  VTL_media_container_encoding_vk_helper.h  VTL_vencode.h  VTL_vencode_core.c  VTL_vencode_cpu.c  VTL_vencode_loader.c  VTL_vencode_transcoder.c  VTL_vencode_vk.c  VTL_vencode_vk_helper.h
VTL/media_container/img/: CMakeLists.txt  VTL_img.h  VTL_img_core.c  VTL_img_core.h  VTL_img_filters.c  VTL_img_filters.h  VTL_img_utils.c  VTL_img_utils.h  VTL_media_container_img.h  VTL_media_container_img_core.c  VTL_media_container_img_core.h  VTL_media_container_img_data.h  VTL_media_container_img_filters.c  VTL_media_container_img_filters.h  VTL_media_container_img_utils.c  VTL_media_container_img_utils.h
VTL/media_container/sub/: VTL_media_container_sub.h  VTL_media_container_sub_burn.c  VTL_media_container_sub_burn.h  VTL_media_container_sub_convert.c  VTL_media_container_sub_convert.h  VTL_media_container_sub_data.c  VTL_media_container_sub_data.h  VTL_media_container_sub_parse.c  VTL_media_container_sub_parse.h  VTL_media_container_sub_style.c  VTL_media_container_sub_style.h  VTL_sub_convert.c  VTL_sub_data.c  VTL_sub_data.h  VTL_sub_parse.c  VTL_sub_parse.h  VTL_sub_style.c
VTL/media_container/video/: VTL_media_container_video.h  VTL_media_container_video_data.c  VTL_media_container_video_data.h
VTL/publication/: CMakeLists.txt  VTL_publication.c  VTL_publication_data.h
VTL/publication/text/: VTL_publication_markup_text_flags_check.c  VTL_publication_text.h  VTL_publication_text_data.h  VTL_publication_text_op.c  VTL_publication_text_op.h
VTL/scheduler/: CMakeLists.txt  VTL_scheduler.h  VTL_scheduler_data.h
VTL/scheduler/db/: VTL_scheduler_db_repo.c  VTL_scheduler_db_repo.h  VTL_scheduler_repo.c  VTL_scheduler_repo.h
VTL/scheduler/dispatcher/: VTL_scheduler_dispatcher.c  VTL_scheduler_dispatcher.h
VTL/scheduler/metadata/: VTL_scheduler_metadata.c  VTL_scheduler_metadata.h
VTL/test/: CMakeLists.txt  VTL_test_mediawiki.c
VTL/user/: CMakeLists.txt  VTL_user_data.c  VTL_user_data.h
VTL/user/db/: VTL_user_db.c  VTL_user_db.h
VTL/user/history/: VTL_user_history.h  VTL_user_history_data.c  VTL_user_history_data.h
VTL/utils/: CMakeLists.txt  VTL_encryptor.c  VTL_encryptor.h  VTL_time.c  VTL_time.h  VTL_utils.h  VTL_utils_encryptor.c  VTL_utils_encryptor.h  VTL_utils_file.c  VTL_utils_file.h  VTL_utils_time.c  VTL_utils_time.h  http_client.c
VTL/utils/auth/: CMakeLists.txt  VTL_auth.c  VTL_keys.c  VTL_utils_auth.c  VTL_utils_auth.h  VTL_utils_auth_keys.c
VTL/utils/curl/: VTL_http_client.c  VTL_utils_curl_http_client.c  VTL_utils_curl_http_client_simple.c
VTL/utils/db/: VTL_db.c  VTL_db.h  VTL_db_connection.c  VTL_utils_db.c  VTL_utils_db_connection.c  VTL_utils_db_connection.h  VTL_utils_db_credentials.c  VTL_utils_db_executor.c  VTL_utils_db_executor.h
VTL/utils/log/: VTL_utils_log_console.c
VTL/utils/threading/: CMakeLists.txt  VTL_thread_compat.h
cmake/libpq/: CMakeLists.txt  bootstrap-generated.bat
external_sources/ed25519/: CMakeLists.txt
(+255 files in other folders)
